Fix footer on mobile

--- a/style/body/footer.scss
+++ b/style/body/footer.scss
@@ -4,6 +4,7 @@
 footer {
     min-height: 30vh;
     grid-column: sidebar-start / display-end;
+    grid-row-start: content-end;
     grid-column-gap: 2rem;
     display: grid;
     justify-content: center;
@@ -13,11 +14,22 @@ footer {
     background-position: 0 25%;
     padding: 4rem 2rem 5rem 2rem;
 
+    @media only screen and (max-width: $bp-large) {
+        min-height: auto;
+        padding: 5rem;
+        display: flex;
+        flex-direction: column;
+    }
+
     img {
-        grid-row: 1 / 3;
         grid-column: 1 / 2;
         height: 13rem;
-        filter: drop-shadow(2px 3px 6px rgb(63, 63, 63))
+        filter: drop-shadow(2px 3px 6px rgb(63, 63, 63));
+
+        @media only screen and (max-width: $bp-large) {
+            grid-column: 1 / 3;
+            margin-bottom: 3rem;
+        }
     }
 
     p {
@@ -26,12 +38,22 @@ footer {
         font-family: $manrope;
         color: white;
         text-align: center;
+
+        @media only screen and (max-width: $bp-large) {
+            grid-column: 1 / 3;
+        }
     }
 
     #social {
         grid-column: 2 / 3;
         display: grid;
         grid-template-columns: repeat(6, min-content);
+
+        @media only screen and (max-width: $bp-large) {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 3rem;
+        }
 
         a {
             display: flex;
@@ -44,6 +66,11 @@ footer {
             color: white;
             transition: background-color 0.1s;
             font-size: 3.5rem;
+
+            @media only screen and (max-width: $bp-large) {
+                height: auto;
+                padding: 5px;
+            }
         }
 
         a:nth-child(1) {
