--- a/style/output/index.css
+++ b/style/output/index.css
@@ -312,6 +312,7 @@ header #social a.fa-soundcloud {
 footer {
   min-height: 30vh;
   grid-column: sidebar-start/display-end;
+  grid-row-start: content-end;
   grid-column-gap: 2rem;
   display: grid;
   justify-content: center;
@@ -321,11 +322,24 @@ footer {
   background-position: 0 25%;
   padding: 4rem 2rem 5rem 2rem;
 }
+@media only screen and (max-width: 62.5em) {
+  footer {
+    min-height: auto;
+    padding: 5rem;
+    display: flex;
+    flex-direction: column;
+  }
+}
 footer img {
-  grid-row: 1/3;
   grid-column: 1/2;
   height: 13rem;
   filter: drop-shadow(2px 3px 6px rgb(63, 63, 63));
+}
+@media only screen and (max-width: 62.5em) {
+  footer img {
+    grid-column: 1/3;
+    margin-bottom: 3rem;
+  }
 }
 footer p {
   grid-column: 2/3;
@@ -334,10 +348,22 @@ footer p {
   color: white;
   text-align: center;
 }
+@media only screen and (max-width: 62.5em) {
+  footer p {
+    grid-column: 1/3;
+  }
+}
 footer #social {
   grid-column: 2/3;
   display: grid;
   grid-template-columns: repeat(6, min-content);
+}
+@media only screen and (max-width: 62.5em) {
+  footer #social {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 3rem;
+  }
 }
 footer #social a {
   display: flex;
@@ -350,6 +376,12 @@ footer #social a {
   color: white;
   transition: background-color 0.1s;
   font-size: 3.5rem;
+}
+@media only screen and (max-width: 62.5em) {
+  footer #social a {
+    height: auto;
+    padding: 5px;
+  }
 }
 footer #social a:nth-child(1) {
   font-family: "Manrope", sans-serif;
